# vmClaw

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
.github/: copilot-instructions.md
PRD/: PRD.md
docs/: fleet-architecture.md
mobile/vmclaw_mobile/: .gitignore  README.md  pubspec.yaml
mobile/vmclaw_mobile/android/app/: build.gradle.kts
mobile/vmclaw_mobile/android/app/src/main/: AndroidManifest.xml
mobile/vmclaw_mobile/android/app/src/main/kotlin/com/vmclaw/vmclaw_mobile/: MainActivity.kt
mobile/vmclaw_mobile/ios/Runner/: Info.plist
mobile/vmclaw_mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/vmclaw_mobile/lib/: main.dart
mobile/vmclaw_mobile/lib/models/: models.dart
mobile/vmclaw_mobile/lib/screens/: connect_screen.dart  dashboard_screen.dart  live_execution_screen.dart  task_composer_screen.dart  task_history_screen.dart  vm_picker_screen.dart
mobile/vmclaw_mobile/lib/services/: api_client.dart  providers.dart  router.dart  settings_store.dart
mobile/vmclaw_mobile/test/: widget_test.dart
mobile/vmclaw_mobile/web/: index.html  manifest.json
src/vmclaw/: __init__.py  __main__.py  ai_client.py  capture.py  config.py  discovery.py  executor.py  fleet.py  fleet_models.py  gui.py  main.py  memory.py  models.py  orchestrator.py  scanner.py  server.py  task_store.py
