[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vmclaw"
version = "0.1.0"
description = "AI-powered virtual machine screen control agent"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "pyautogui>=0.9",
    "mss>=9.0",
    "pywin32>=306",
    "Pillow>=10.0",
    "rich>=13.0",
]

[project.scripts]
vmclaw = "vmclaw.main:main"

[tool.setuptools.packages.find]
where = ["src"]
