[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vmclaw"
version = "0.1.0"
description = "AI-powered virtual machine screen control agent"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "pyautogui>=0.9",
    "mss>=9.0",
    "pywin32>=306",
    "Pillow>=10.0",
    "rich>=13.0",
    "sqlite-vec>=0.1.6",
    "sounddevice>=0.4",
    "numpy>=1.20",
    "SpeechRecognition>=3.10",
]

[project.scripts]
vmclaw = "vmclaw.main:main"
vmclaw-gui = "vmclaw.gui:launch_gui"

[tool.setuptools.packages.find]
where = ["src"]
